# HydroModelsPaperCode

./: .gitattributes  .gitignore  Manifest.toml  Project.toml  pyproject.toml
models/: HBV.jl  dplHBV.jl  dplHBV_slight.jl  exphydro.jl  exphydrov2.jl  gr4j.jl  loss_func.jl  m100.jl  m50.jl  m50v2.jl  xaj.jl
src/benchmark/: airgr4j_benchmark.r  enviroment_node.md  hydromodel_benchmark.jl  hydromodel_benchmarkv2.jl  jax_benchmark.py  jax_benchmark_jit.py  julia_benchmark.jl  marrmot_benchamark.m  scipy_benchmark.py  superflexpy_benchmark.py  torch_benchmark.py
src/benchmark/utils/: data_loader.py  interpolate.py
src/distributed/: optimal_grid_hbv.jl  plot_flowdir.jl  plot_flowdir_direct.jl  plot_flowdir_example.jl  run_HBV.jl  run_grid_dplhbv.jl  run_grid_hbv.jl  run_multi_nodes_dplhbv.jl  run_rapid_dplhbv.jl  run_rapid_hbv.jl  show_code copy.jl  show_code.jl  test_kan.jl
src/distributed/cache/: hbv_opt.jld2
src/distributed/data/: flow.csv  grid_basin_info.jld2  hbv_params.csv  meteo_mean.csv  subbasin_types.csv  vector_basin_info.jld2
src/implements/: check_nnfunc_speed.jl  run_dplHBV.jl  run_dplHBV_optimize.jl  run_exphydro_optimize.jl  run_m50_optimize.jl  test_build.jl  test_gradient.jl
src/implements/plot/: plot_dplhbv.jl  plot_exphydro_train.jl  plot_m50_nn_train.jl  plot_m50_predict.jl  plot_m50_training.jl
src/implements/save/: dplHBV_opt.jld2  dplHBV_opt_records.csv
src/models/: HBV.jl  dplHBV.jl  m50.jl  m50v2.jl
src/sensetivity/: exphydro_params_sense.jl  sobol_ssa.jl  xsa_demo1.jl
